namespace ORM_v1.core;

public enum EntityState
{
    Detached,
    Unchanged,
    Added,
    Modified,
    Deleted
}